# rust-wasm-test

./: Cargo.toml  README.md  build.sh  index.html  main.css  out.wasm  setup-toolchain.sh  wasm-loader.js  wasm.wasm
src/: lib.rs
