[package]
name = "rust-wasm-test"
version = "0.1.0"
authors = ["Nathan Ross <NathanAnthonyRoss19@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = { version = "0.4.2" }

[profile.release]
# Tell `rustc` to optimize for small code size.
lto = true
opt-level = "s"
debug = false
panic = "abort"